--- a/index.html
+++ b/index.html
@@ -31,12 +31,13 @@
 
         <div class="booking-content">
             <h1>Cruise Queen</h1>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book./p>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
         </div>
 
 
         <div class="booking-form">
             <h3>Book Ocean Time</h3>
+
             <div class="input-group">
                 <label for="">Flying From</label>
                 <input class="inp-style" type="text" name="" placeholder="Dhaka, Bangladesh">
@@ -45,6 +46,7 @@
                 <label for="">Flying To</label>
                 <input class="inp-style" type="text" name="" placeholder="New York, United States">
             </div>
+
             <div class="inputs">
                 <div class="input-group">
                     <label" for="">Departure</label>
@@ -55,23 +57,24 @@
                     <input class="inp-style" type="date" name="">
                 </div>
             </div>
+
             <div class="input-group f-class">
                 <div>
                     <label for="">First Class ($150)</label>
-                    <input class="inp-style inp-width" type="number" name="">
+                    <input class="inp-style inp-width" type="number" name="" id="firstClass-count" value="0">
                 </div>
                 <div class="plus-minus-btn">
-                    <p>+ -</p>
+                    <p><span onclick="handleTicketChange('firstClass', true)">+</span> <span onclick="handleTicketChange('firstClass', false)">-</span> </p>
                 </div>
             </div>
             
             <div class="input-group f-class">
                 <div>
                     <label for="">Economy ($100)</label>
-                    <input class="inp-style inp-width" type="number" name="">
+                    <input class="inp-style inp-width" type="number" name="" value="0" id="economy-count">
                 </div>
                 <div class="plus-minus-btn">
-                    <p> <span>+</span> <span>-</span> </p>
+                    <p><span onclick="handleTicketChange('economy', true)">+</span> <span onclick="handleTicketChange('economy', false)">-</span></p>
                 </div>
             </div>
             <div class="calculations">
@@ -80,7 +83,7 @@
                         <p>Subtotal</p>
                     </div>
                     <div class="right">
-                        <p>$500</p>
+                        <p id="total-amount">$00</p>
                     </div>
                 </div>
 
@@ -89,7 +92,7 @@
                         <p>Charge 10% VAT</p>
                     </div>
                     <div class="right">
-                        <p>$50</p>
+                        <p id="vat-amount">$00</p>
                     </div>
                 </div>
                 <hr>
@@ -98,7 +101,7 @@
                         <h4>Total</h4>
                     </div>
                     <div class="right">
-                        <p>$550</p>
+                        <p id="grand-total">$00</p>
                     </div>
                 </div>
             </div>
@@ -107,6 +110,52 @@
     </main>
 
     <!--Thank You-->
-</body>
 
+    <script>
+
+        // Plus Minus button event handler
+        function handleTicketChange(ticket, isIncrease){
+            const ticketCount = getInputValue(ticket);
+            let ticketNewCount = ticketCount;
+            if (isIncrease == true) {
+                ticketNewCount = ticketCount + 1;
+            }
+            if (isIncrease == false && ticketCount > 0) {
+                ticketNewCount = ticketCount - 1;
+            }
+            document.getElementById(ticket + '-count').value = ticketNewCount;
+            let ticketTotal = 0;
+            if (ticket == 'firstClass') {
+                ticketTotal = ticketNewCount * 150;
+            }
+            if (ticket == 'economy') {
+                ticketTotal = ticketNewCount * 100;
+            }
+            calculateTotal();
+        }
+
+        // Total Calculation Function
+        function calculateTotal() {
+            const firstClassCount =  getInputValue('firstClass');
+            const economyCount =  getInputValue('economy');
+
+            const totalAmount = firstClassCount * 150 + economyCount * 100;
+            document.getElementById('total-amount').innerText = '$' + totalAmount;
+
+            const vat = Math.round(totalAmount * 0.1);
+            document.getElementById('vat-amount').innerText = '$' + vat;
+
+            const grandTotal = totalAmount + vat;
+            document.getElementById('grand-total').innerText = "$" + grandTotal;
+        }
+
+        // Get User Input Value
+        function getInputValue(ticket) {
+            const ticketInput = document.getElementById(ticket + '-count');
+            const ticketCount = parseInt(ticketInput.value);
+            return ticketCount;
+        }
+        // Thank you for visiting my code.
+    </script>
+</body>
 </html>
