--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curise Booking</title>
+    <title>Cruise Booking</title>
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@400;500;700&display=swap"
@@ -31,11 +31,13 @@
 
         <div class="booking-content">
             <h1>Cruise Queen</h1>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+                scrambled it to make a type specimen book.</p>
         </div>
 
 
-        <div class="booking-form">
+        <div class="booking-form" id="booking-area">
             <h3>Book Ocean Time</h3>
 
             <div class="input-group">
@@ -50,7 +52,7 @@
             <div class="inputs">
                 <div class="input-group">
                     <label" for="">Departure</label>
-                    <input class="inp-style" type="date" name="">
+                        <input class="inp-style" type="date" name="">
                 </div>
                 <div class="input-group">
                     <label for="">Return</label>
@@ -64,17 +66,19 @@
                     <input class="inp-style inp-width" type="number" name="" id="firstClass-count" value="0">
                 </div>
                 <div class="plus-minus-btn">
-                    <p><span onclick="handleTicketChange('firstClass', true)">+</span> <span onclick="handleTicketChange('firstClass', false)">-</span> </p>
+                    <p><span onclick="handleTicketChange('firstClass', true)">+</span> <span
+                            onclick="handleTicketChange('firstClass', false)">-</span> </p>
                 </div>
             </div>
-            
+
             <div class="input-group f-class">
                 <div>
                     <label for="">Economy ($100)</label>
                     <input class="inp-style inp-width" type="number" name="" value="0" id="economy-count">
                 </div>
                 <div class="plus-minus-btn">
-                    <p><span onclick="handleTicketChange('economy', true)">+</span> <span onclick="handleTicketChange('economy', false)">-</span></p>
+                    <p><span onclick="handleTicketChange('economy', true)">+</span> <span
+                            onclick="handleTicketChange('economy', false)">-</span></p>
                 </div>
             </div>
             <div class="calculations">
@@ -105,7 +109,10 @@
                     </div>
                 </div>
             </div>
-            <button class="btn-style">Book Now</button>
+            <button class="btn-style" onclick="confirmMassege()">Book Now</button>
+        </div>
+        <div id="congrats-message">
+            <h1>Congrats Your Booking is Completed</h1>
         </div>
     </main>
 
@@ -113,8 +120,8 @@
 
     <script>
 
-        // Plus Minus button event handler
-        function handleTicketChange(ticket, isIncrease){
+        // Plus Minus button event handler 
+        function handleTicketChange(ticket, isIncrease) {
             const ticketCount = getInputValue(ticket);
             let ticketNewCount = ticketCount;
             if (isIncrease == true) {
@@ -134,10 +141,10 @@
             calculateTotal();
         }
 
-        // Total Calculation Function
+        // Total ticket price calculation 
         function calculateTotal() {
-            const firstClassCount =  getInputValue('firstClass');
-            const economyCount =  getInputValue('economy');
+            const firstClassCount = getInputValue('firstClass');
+            const economyCount = getInputValue('economy');
 
             const totalAmount = firstClassCount * 150 + economyCount * 100;
             document.getElementById('total-amount').innerText = '$' + totalAmount;
@@ -155,7 +162,15 @@
             const ticketCount = parseInt(ticketInput.value);
             return ticketCount;
         }
+
+        // Congrats message funtion
+        function confirmMassege() {
+            document.getElementById('booking-area').style.display = 'none';
+            document.getElementById('congrats-message').style.display = 'block';
+        }
+
         // Thank you for visiting my code.
     </script>
 </body>
+
 </html>
